--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,12 +8,7 @@ dotfiles:
   version: master
   files:
     - .gitconfig
-    - .screenrc
+    - .gitmessage.txt
     - .tmux.conf
     - .vimrc
     - .vimrc.plugin
-    - .zsh.d
-    - .zshrc
-repo_shougowares:
-  - https://github.com/Shougo/unite.vim
-  - https://github.com/Shougo/neobundle.vim.git
