--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,15 +3,14 @@ galaxy_info:
   author: "kse201"
   description: "install kse201's dotfiles"
   license: MIT
-  min_ansible_version: 1.2
+  min_ansible_version: 2.2
   platforms:
-    - name: GenericUNIX
-      versions:
-        - all
-        - any
     - name: EL
       versions:
         - 7
+    - name: Ubuntu
+      versions:
+        - trusty
   categories:
     - development
     - system
