--- a/tasks/clone.yml
+++ b/tasks/clone.yml
@@ -1,7 +1,13 @@
 ---
+- name: check dotfiles
+  stat:
+    path: "{{ ansible_env.HOME }}/.dotfiles"
+  register: dotfiles
+
 - name: install dotfiles
   git:
     repo: "{{ kse201_dotfiles.repo.url }}"
     dest: "{{ ansible_env.HOME }}/.dotfiles"
     depth: "{{ kse201_dotfiles.repo.depth }}"
     version: "{{ kse201_dotfiles.repo.version }}"
+  when: not dotfiles.stat.exists
