bugfix: modify permission

--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -11,4 +11,5 @@
   vars:
     dropin_dir: /etc/systemd/system/docker.service.d
     http_proxy: "{{ ansible_env.HTTP_PROXY }}"
+  become: yes
   when: "{{ 'HTTP_PROXY' in ansible_env }}"
