--- a/tasks/package.yml
+++ b/tasks/package.yml
@@ -1,27 +1,29 @@
 ---
-- name: install packages
-  pacman:
-    name: "{{ item }}"
-  with_items:
-    - "{{ kse201_base.packages.native }}"
+- block:
+  - name: install packages
+    pacman:
+      name: "{{ item }}"
+    with_items:
+      - "{{ kse201_base.packages.native }}"
 
-- name: ensure ruby is installed
-  pacman:
-    name: ruby
-  tags:
-    - ruby
+  - name: ensure ruby is installed
+    pacman:
+      name: ruby
+    tags:
+      - ruby
 
-- name: ensure python is installed
-  pacman:
-    name: "{{ item }}"
-  with_items:
-    - python
-    - python-pip
-  tags:
-    - python
+  - name: ensure python is installed
+    pacman:
+      name: "{{ item }}"
+    with_items:
+      - python
+      - python-pip
+    tags:
+      - python
 
-- name: ensure docker is installed
-  pacman:
-    name: docker
-  tags:
-    - docker
+  - name: ensure docker is installed
+    pacman:
+      name: docker
+    tags:
+      - docker
+  become: yes
