--- a/tasks/ruby.yml
+++ b/tasks/ruby.yml
@@ -2,5 +2,6 @@
 - name: install additional rubygems
   gem:
     name: "{{ item }}"
+    user_install: yes
   with_items:
     - "{{ kse201_base.ruby.rubygems }}"
