--- a/tasks/package.yml
+++ b/tasks/package.yml
@@ -1,10 +1,21 @@
 ---
 - block:
-  - name: install packages
+  - name: ensure basic packages is installed
     pacman:
       name: "{{ item }}"
     with_items:
-      - "{{ kse201_base.packages.native }}"
+      - "{{ kse201_base.packages.native.basic }}"
+
+  - name: ensure proxychains-ng is installed if HTTP_PROXY is set
+    pacman:
+      name: proxychains-ng
+    when: not "{{ ansible_env.HTTP_PROXY }}" == ''
+
+  - name: ensure additional packages is installed
+    pacman:
+      name: "{{ item }}"
+    with_items:
+      - "{{ kse201_base.packages.native.additional }}"
 
   - name: ensure ruby is installed
     pacman:
