--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -29,6 +29,9 @@ kse201_base:
         - tree
         - glances
         - ansible
+        - cifs-utils
+        - clamav
+        - postfix
       desktop:
         - ibus
         - xfce4
@@ -36,28 +39,38 @@ kse201_base:
         - lightdm
         - lightdm-gtk-greeter
       additional:
-        - ranger
-        - pkgfile
-        - vagrant
-        - lxc
         - arch-install-scripts
         - cronie
-        - sshfs
+        - cowsay
+        - figlet
+        - hydra
+        - lolcat
+        - lxc
+        - moreutils
+        - nmap
+        - pass
+        - pkgfile
+        - ranger
+        - vagrant
     foreign:
+      - dateutils
       - ghq
-      - peco
       - lostfiles
-      - ttf-ricty
       - mozc
-      - xfce-theme-blackbird
-      - xfce-theme-axiomd
+      - open-usp-tukubai
+      - peco
       - pipdeptree
+      - ttf-ricty
+      - xfce-theme-axiomd
+      - xfce-theme-blackbird
   ruby:
     rubygems:
       - bundler
       - rubocop
       - serverspec
       - tmuxinator
+      - guard
+      - guard-shell
   python:
     pips:
       - neovim
