--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -1,7 +1,27 @@
 ---
+- name: ensure pyenv is installed
+  pacman:
+    name: pyenv
+  tags:
+    - python
+  when: ansible_os_family == "Archlinux"
+  become: yes
+
+- name: ensure python is installed
+  yum:
+    name: "{{ item }}"
+  with_items:
+    - python
+    - python-pip
+  tags:
+    - python
+  when: ansible_os_family == "RedHat"
+  become: yes
+
 - name: install pip
   pip:
     name: "{{ item }}"
     extra_args: --user
   with_items:
     - "{{ kse201_base.python.pips }}"
+  ignore_errors: yes # TODO: failed install with vim-vint
