--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,4 +24,4 @@
 - include: desktop.yml
   tags:
     - desktop
-  when: ansible_distribution == "Archlinux" and headleass != true
+  when: ansible_distribution == "Archlinux" and headless != true
