--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -1,7 +1,5 @@
 ---
 - name: ensure Desktop packages
   pacman:
-    name: "{{ item }}"
+    name: "{{ kse201_base.packages.native.desktop }}"
   become: true
-  with_items:
-    - "{{ kse201_base.packages.native.desktop }}"
