feature install AUR packages

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -55,7 +55,7 @@ kse201_base:
         - pass
         - pkgfile
         - vagrant
-    foreign:
+    aur:
       - dateutils
       - ghq
       - lostfiles
