feature: add arch package

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,6 +37,8 @@ kse201_base:
         - highlight
         - lynx
         - elinks
+        - thefuck
+        - diff-so-fancy
       desktop:
         - ibus
         - xfce4
