--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,10 +9,13 @@
     home_files: "{{ kse201_base.home_files }}"
   tags:
     - deploy
+
 - include: package.yml
   tags:
     - package
+
 - include: yay.yml
+  when: ansible_distribution == "Archlinux"
 
 - include: desktop.yml
   tags:
